Bug 99733 - CALC EDITING: Crash when moving range of cells
Summary: CALC EDITING: Crash when moving range of cells
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: Other macOS (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords:
: 90689 94755 96342 100058 100527 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-08 18:45 UTC by mrelwood
Modified: 2016-12-02 18:02 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Select gray cells and move with drag & drop = crash. (11.50 KB, application/vnd.ms-excel)
2016-05-08 18:45 UTC, mrelwood
Details
valgrind log (7.90 KB, text/plain)
2016-05-24 12:27 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mrelwood 2016-05-08 18:45:04 UTC
Created attachment 124914 [details]
Select gray cells and move with drag & drop = crash.

ISSUE: Selecting a specific range of cells and moving them by drag & drop crashes LibreOffice. No matter if I try to move for just one row/column or to outside the selected region, crash every time.

REPRODUCE: In the sample document, select the gray cells and try to move them anywhere = crash.

CULPRIT: If I delete any of the remaining calculations at column X (=SUM(C18:W18)), the crash no longer happens. I was able to remove just one of them (at row 20) to keep the crash happening, removing any other results in no crash.


LIBREOFFICE VERSIONS: Crash happens in all LibreOffice versions tested, all on MacBook Air or Pro, running OSX 10.11.4:

Version: 5.1.0.3
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: -; UI Render: default; 
Locale: en-US (en.UTF-8)

Version: 5.1.1.1
Build ID: c43cb650e9c145b181321ea547d38296db70f36e
CPU Threads: 4; OS Version: Mac OS X 10.11.4; UI Render: GL; 
Locale: fi-FI (en.UTF-8)

Version: 5.2.0.0.alpha0+
Build ID: 101e5bbc8aaa77d5db36e0969a512b5a283f1672
CPU Threads: 4; OS Version: Mac OS X 10.11.4; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-04-18_05:11:03
Locale: fi-FI (en.UTF-8)

Version: 5.2.0.0.alpha1+
Build ID: d223aa57a1d6e356f24cd5ac4ddd702336b2ee87
CPU Threads: 4; OS Version: Mac OS X 10.11.4; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-05-07_00:24:03
Locale: fi-FI (en.UTF-8)


DUPLICATES: I found two similiar reports on Linux from 2012 (LO 3), but they were resolved, so this should be a new issue.
Comment 1 mrelwood 2016-05-08 19:20:15 UTC
Saving the spreadsheet in .xlsx or .ods and restarting LibreOffice doesn't affect the issue, still crashes the same.
Comment 2 m_a_riosv 2016-05-08 22:26:05 UTC
Please try resetting the user profile, sometimes solves strange issues.
https://wiki.documentfoundation.org/UserProfile
Usually it's enough renaming/deleting the file "user/registrymodifications.xcu",  it affects all the options in Menu/Tools/Options, and the files "user/basic/dialog.xlc" and "scrip.xlc" are overwritten, additionally custom colors in "user/config/standard.soc" are lost.
Comment 3 mrelwood 2016-05-08 22:33:55 UTC
The menu item mentioned in the wiki:
Tools > Options
does not exist.

Anyway, renaming the user profile directory and relaunching LibreOffice did not affect this issue. Still crashes.
Comment 4 m_a_riosv 2016-05-08 23:01:39 UTC
Sorry I think for mac is Menu/Edit/Preferences.
Comment 5 mrelwood 2016-05-08 23:06:37 UTC
It's actually in the main application menu:
LibreOfficeDev > Preferences...

Anyway, no help from resetting the user profile, still crashes.
Comment 6 raal 2016-05-11 08:05:43 UTC
No crash Version: 5.2.0.0.alpha1+; win7
Comment 7 Buovjaga 2016-05-17 18:57:43 UTC
Repro.

Version: 5.1.2.2
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU Threads: 4; OS Version: Mac OS X 10.11.4; UI Render: default; 
Locale: en-US (en.UTF-8)
Comment 8 Caolán McNamara 2016-05-24 12:27:28 UTC
Created attachment 125259 [details]
valgrind log
Comment 9 Caolán McNamara 2016-05-24 12:29:11 UTC
I can reproduce this. https://gerrit.libreoffice.org/#/c/25405/ is my (simplistic?) fix
Comment 10 Commit Notification 2016-05-24 13:52:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d116ad98d7c25df4ad63839bcf2fd7f152956df

Resolves: tdf#99733 don't crash on moving range of cells

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-05-24 16:19:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4ca886a6c0febac630761f4e7f685fc96a083ca&h=libreoffice-5-1

Resolves: tdf#99733 don't crash on moving range of cells

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2016-05-26 13:50:17 UTC
*** Bug 96342 has been marked as a duplicate of this bug. ***
Comment 13 Buovjaga 2016-05-26 15:46:20 UTC
No crash from moving the grey ones anymore.

Version: 5.3.0.0.alpha0+
Build ID: b2f994469f3e2f1fe72e9f103b840aa949ace6dd
CPU Threads: 4; OS Version: Mac OS X 10.11.5; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-05-25_23:36:03
Locale: en-US (en.UTF-8)
Comment 14 Buovjaga 2016-05-26 15:49:21 UTC
*** Bug 100058 has been marked as a duplicate of this bug. ***
Comment 15 Caolán McNamara 2016-06-03 15:26:15 UTC
*** Bug 90689 has been marked as a duplicate of this bug. ***
Comment 16 Caolán McNamara 2016-06-21 11:45:18 UTC
*** Bug 94755 has been marked as a duplicate of this bug. ***
Comment 17 Aron Budea 2016-12-02 18:02:09 UTC
*** Bug 100527 has been marked as a duplicate of this bug. ***