Resolves: tdf#99733 don't crash on moving range of cells

Change-Id: Ib9afc8ef292e517954b24321100862f5235290e5
Reviewed-on: https://gerrit.libreoffice.org/25405
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>