sc/source/core/data/bcaslot.cxx
@@ -506,7 +506,11 @@ void ScBroadcastAreaSlot::EraseArea( ScBroadcastAreas::iterator& rIter )
         ScBroadcastArea* pArea = (*rIter).mpArea;
         aBroadcastAreaTbl.erase( rIter);
         if (!pArea->DecRef())
+        {
+            if (pBASM->IsInBulkBroadcast())
+                pBASM->RemoveBulkGroupArea(pArea);
             delete pArea;
+        }
     }
 }
 
@@ -1156,6 +1160,11 @@ void ScBroadcastAreaSlotMachine::BulkBroadcastGroupAreas()
 size_t ScBroadcastAreaSlotMachine::RemoveBulkArea( const ScBroadcastArea* pArea )
 {
     return aBulkBroadcastAreas.erase( pArea );
+}
+
+void ScBroadcastAreaSlotMachine::RemoveBulkGroupArea( ScBroadcastArea* pArea )
+{
+    m_BulkGroupAreas.erase(pArea);
 }
 
 void ScBroadcastAreaSlotMachine::PushAreaToBeErased( ScBroadcastAreaSlot* pSlot,
